<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/androidceblog" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="17dp"
        android:text="@string/soru1"
        android:textColor="#00FF00"
         />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cvp11"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/aslan" />

        <Button
            android:id="@+id/cvp12"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.21"
            android:text="@string/koc" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="22dp"
        android:text="@string/soru2"
        android:textColor="#00FF00"
         />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cvp21"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/hayir" />

        <Button
            android:id="@+id/cvp22"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.21"
            android:text="@string/evet" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="14dp"
        android:text="@string/soru3"
        android:textColor="#00FF00"
         />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cvp31"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/encokcaba" />

        <Button
            android:id="@+id/cvp32"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.21"
            android:text="@string/enazcaba" />
    </LinearLayout>

</RelativeLayout>